apps/longhorn-system/longhorn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.taurus.kube.internal`)
      priority: 10
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-frontend-tls
